- reg_water_flask dockerized

--- a/reg_water_flask/Dockerfile
+++ b/reg_water_flask/Dockerfile
@@ -45,6 +45,7 @@ USER appuser
 # to get files from a parent file, this docker needs to
 # be build from the parent directory
 COPY reg_water_flask/reg_water_flask.py .
+COPY reg_water_flask/templates/index.html templates/index.html
 COPY shared/mqttclient.py .
 COPY shared/restclient.py .
 
