- updated reg_telegram version into yaml

--- a/reg3_frontend.yaml
+++ b/reg3_frontend.yaml
@@ -11,7 +11,7 @@ services:
     restart: unless-stopped
 
   reg3_telegram:
-    image: jvicient/reg_telegram:latest
+    image: jvicient/reg_telegram:v1.1
     hostname: reg3telegram
     environment:
       - TELEGRAM_TOKEN=#copy the token without ' nor "
