- water tasks are stored in a qnas folder instead of in a volume.

--- a/reg3_backend.yaml
+++ b/reg3_backend.yaml
@@ -22,7 +22,7 @@ services:
   reg3_water:
     image: jvicient/reg_water:v1.2
     volumes:
-      - reg3-data:/data
+      - /share/Container/reg:/data
     networks:
       - qnet-dhcp
     ports:
@@ -40,6 +40,3 @@ networks:
       driver: qnet
       options:
         iface: "eth1"
-
-volumes:
-  reg3-data:
